--- a/build.gradle
+++ b/build.gradle
@@ -3,30 +3,53 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'idea'
+apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+group = 'com.rifaulkner'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
 
 jar {
     baseName = 'gas-consumption'
-    version =  '0.1.0'
 }
 
 repositories {
     mavenCentral()
+    maven { url "https://repository.jboss.org/nexus/content/repositories/releases" }
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 group 'com.rifaulkner'
 version '1.0-SNAPSHOT'
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    compile("org.webjars:bootstrap:3.3.7")
+
+    //compile("org.springframework.boot:spring-boot-starter-web")
+
+
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("com.h2database:h2")
+    compile('org.springframework.boot:spring-boot-starter-data-rest')
+    compile('org.springframework.boot:spring-boot-starter-mail')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-validation')
+    compile('org.springframework.kafka:spring-kafka')
+    //compile('org.springframework.session:spring-session-core')
+    compile('org.springframework.shell:spring-shell-starter:2.0.0.RELEASE')
+    runtime('org.springframework.boot:spring-boot-devtools')
+    runtime('mysql:mysql-connector-java')
+    //compileOnly('org.projectlombok:lombok')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 }
+
